--- a/LoggerModule/LoggerModuleCapp/pom.xml
+++ b/LoggerModule/LoggerModuleCapp/pom.xml
@@ -11,6 +11,7 @@
   <properties>
     <www.cellcard.com.LoggerModuleConfig.sequence_._Tools_LogFormatterSequence>capp/EnterpriseServiceBus</www.cellcard.com.LoggerModuleConfig.sequence_._Tools_LogFormatterSequence>
     <www.cellcard.com.LoggerModuleConfig.api_._LoggerTestAPI>capp/EnterpriseServiceBus</www.cellcard.com.LoggerModuleConfig.api_._LoggerTestAPI>
+    <www.cellcard.com.LoggerModuleConfig.sequence_._CApp_FormateLogSeq>capp/EnterpriseServiceBus</www.cellcard.com.LoggerModuleConfig.sequence_._CApp_FormateLogSeq>
     <www.cellcard.com.LoggerModuleConfig.template_._LoggerTemplate>capp/EnterpriseServiceBus</www.cellcard.com.LoggerModuleConfig.template_._LoggerTemplate>
     <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,event/stream=json,service/meta=xml,datasource/datasource=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,wso2/gadget=dar,synapse/api=xml,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
   </properties>
@@ -30,6 +31,12 @@
     <dependency>
       <groupId>www.cellcard.com.LoggerModuleConfig.sequence</groupId>
       <artifactId>Tools_LogFormatterSequence</artifactId>
+      <version>1.0.0</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>www.cellcard.com.LoggerModuleConfig.sequence</groupId>
+      <artifactId>CApp_FormateLogSeq</artifactId>
       <version>1.0.0</version>
       <type>xml</type>
     </dependency>
